# CityFramework

./: ..gitignore.swp  .gitignore  CMakeLists.txt  README.md
KDTree/: CMakeLists.txt
include/: annotationfilemanager.h  building.h  buildingsgroup.h  citygmlcore.h  osmnode.h  osmrelation.h  utilities.h
pkg/: citydigitaltwin-config.cmake.in
src/: annotationfilemanager.cpp  building.cpp  buildingsgroup.cpp  citygmlcore.cpp  compute_slopes.cpp  create_itinerary.cpp  geotiff.cpp  main.cpp  osmnode.cpp  osmrelation.cpp  test.cpp  test_in_polygon.cpp  triangulateTerrain.cpp  utilities.cpp  visualise_city.cpp
triangle/: CMakeLists.txt  polyin.1.ele  polyin.1.node  polyin.1.poly  polyin.poly  shewchuk_triangle.cpp  trianglehelper.cpp  trianglehelper1.cpp  trianglehelper1.h
triangle_mesh/: CMakeLists.txt
triangle_mesh/include/: Triangle.h  TriangleMesh.h  annotation.h
triangle_mesh/src/: Edge.cpp  Triangle.cpp  TriangleMesh.cpp  surfaceannotation.cpp
